@@ -1,5 +1,8 @@
 # Nmap Changelog ($Id$); -*-text-*-
 
+o [NSE][GH#301] Added default credential checks for RICOH Web Image Monitor and
+  BeEF to http-default-accounts. [nnposter]
+
 o Properly display Next-hop MTU value from ICMP Type 3 Code 4 Fragmentation
   Required messages when tracing packets or in Nping output. Improper offset
   meant we were printing the total IP length. [Sławomir Demeszko]
